# input-capture-api

./: README.md  noxfile.py  pyproject.toml
src/input_capture_api/: __init__.py  api.py  main.py  session_manager.py
tests/: __init__.py  test_api.py  test_session_manager.py
